--- a/public/styles.css
+++ b/public/styles.css
@@ -90,9 +90,11 @@ p {
 .panel.right {
   width: 300px;
   height: calc(100% - 80px);
+  max-height: calc(100% - 80px);
   top: 80px;
   right: 0;
-  padding: 1em;
+  padding: 0 25px;
+  overflow: auto;
 }
 
 
@@ -131,5 +133,10 @@ p {
  */
 
 .tumblr {
-  border: 1px solid #ccc;
+  width: 250px;
+  padding-top: 1em;
+}
+
+.tumblr img {
+  margin-bottom: 1em;
 }
