--- a/public/styles.css
+++ b/public/styles.css
@@ -11,6 +11,7 @@ body {
   display: block;
   width: 100%;
   height: 100%;
+  font-family: arial;
 }
 
 body {
@@ -21,8 +22,17 @@ body {
 h1,
 p {
   margin: 0;
+  color: #111;
 }
 
+a {
+  color: #888;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
 
 /**
  * Alert
@@ -137,6 +147,22 @@ p {
   padding-top: 1em;
 }
 
+.tumblr a {
+  display: block;
+}
+
 .tumblr img {
-  margin-bottom: 1em;
+  margin-bottom: 0.5em;
+}
+
+.tumblr figure {
+  margin: 0;
+}
+
+.tumblr picture {
+  display: block;
+}
+
+.tumblr figcaption {
+  margin-bottom: 1.5em;
 }
