--- a/public/styles.css
+++ b/public/styles.css
@@ -11,12 +11,15 @@ body {
   display: block;
   width: 100%;
   height: 100%;
-  font-family: arial;
 }
 
 body {
   margin: 0;
   padding: 0;
+}
+
+h1 {
+  font-size: 40px;
 }
 
 h1,
@@ -161,17 +164,22 @@ a:hover {
   max-width: 400px;
 }
 
-.tumblr h1 a {
-  color: #999;
-  margin-bottom: 1em;
+.tumblr h2 {
+  margin: 0;
+  padding: 1em 0 1em 20px;
+  border-bottom: 1px solid #cfcfcf;
+  display: block;
 }
 
-.tumblr h1 a:hover {
+.tumblr h2 a {
+  color: #999;
+}
+
+.tumblr h2 a:hover {
   color: #333;
 }
 
 .tumblr a,
-.tumblr h1,
 .tumblr picture {
   display: inline-block;
 }
